objects/CCMI__Milestone_Task__c.object
<CustomObject>
    <description>Used for capturing the tasks that form part of the project in the Cloud Coach Fundamentals app (Formerly Cloud Coach Milestones)</description>
    <fields>
        <fullName>CCMI__Assignments__c</fullName>
        <inlineHelpText>List of Users/Contacts/Queues assigned to this task.</inlineHelpText>
        <label>Assignments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCMI__Calculated_Duration__c</fullName>
        <formula>CCMI__Duration__c +
/* Add 2 days for each full week */
(FLOOR(CCMI__Duration__c / 5) * 2) +
/* Determine the day of the week that the task is scheduled to end on, and adjust for the next working day
   5/6/7: Weekend, add an additional 2 days
   -1: Started Monday and duration in full weeks, subtract 2 extra days added from full week calculation */
CASE(MOD(CCMI__Start__c - DATE(1900, 1, 8), 7) + MOD(CCMI__Duration__c, 5) - 1,
  5, 2,
  6, 2,
  7, 2,
  -1, -2,
  0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The length of the Task when weekend days are taken into account.</inlineHelpText>
        <label>Calculated Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMI__Completed_Date__c</fullName>
        <inlineHelpText>Date that the Task is marked as completed.</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Completion_Percent__c</fullName>
        <formula>IF(ISPICKVAL(CCMI__Status__c, &apos;Completed&apos;),
  1,
  IF(ISBLANK(CCMI__Total_Sub_Tasks__c) || CCMI__Total_Sub_Tasks__c == 0,
    0,
    CCMI__Total_Completed_Sub_Tasks__c / CCMI__Total_Sub_Tasks__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCMI__Completion_Status__c</fullName>
        <formula>IF(ISBLANK(CCMI__Completed_Date__c),
  /* If not completed date, then consider the task incomplete */
  &apos;Incomplete&apos;,
  CASE(MAX(CCMI__Completed_Date__c - CCMI__Start__c - CCMI__Calculated_Duration__c, -1),
    -1, &apos;Early&apos;,
    0, &apos;On Time&apos;,
    &apos;Late&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCMI__Desired_Start__c</fullName>
        <inlineHelpText>The desired start date for the Task. May be overridden if the parent task ends after the desired start date.</inlineHelpText>
        <label>Desired Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Duration__c</fullName>
        <inlineHelpText>The number of days the Task is expected to take. (excluding weekends)</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMI__End__c</fullName>
        <formula>BLANKVALUE(CCMI__Completed_Date__c, CCMI__Start__c + CCMI__Calculated_Duration__c - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated end date of the Task, derived from the calculated start date and the calculated duration. If this Task has a completed date, it supersedes this value.</inlineHelpText>
        <label>End Date (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMI__Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCMI__IsLate__c</fullName>
        <formula>NOT(ISPICKVAL(CCMI__Status__c, &apos;Completed&apos;)) &amp;&amp; CCMI__End__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Milestone_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Phase that the current Task is a part of.</inlineHelpText>
        <label>Phase</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CCMI__Milestone_Project__c</field>
                <operation>equals</operation>
                <valueField>CCMI__Milestone_Phase__c.CCMI__Milestone_Project__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMI__Milestone_Phase__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Milestone_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Milestone_Project__c</fullName>
        <description>Detail record to a Milestone Project record</description>
        <inlineHelpText>The milestone project that this task is related to</inlineHelpText>
        <label>Project</label>
        <referenceTo>CCMI__Milestone_Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Milestone_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CCMI__Parent_End__c</fullName>
        <inlineHelpText>The calculated end date of this Task&apos;s parent.</inlineHelpText>
        <label>Parent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Task that the current Task is dependent on.</inlineHelpText>
        <label>Parent Task</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Parent tasks must be from the same project</errorMessage>
            <filterItems>
                <field>$Source.CCMI__Milestone_Project__c</field>
                <operation>equals</operation>
                <valueField>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMI__Milestone_Task__c</referenceTo>
        <relationshipLabel>Milestone Tasks</relationshipLabel>
        <relationshipName>Child_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Show_External__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in External View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Start__c</fullName>
        <formula>IF(CCMI__Completed_Date__c &lt;= CCMI__Desired_Start__c || CCMI__Completed_Date__c &lt;= CCMI__Parent_End__c,
  CCMI__Completed_Date__c,
  IF(ISBLANK(CCMI__Parent_End__c) || CCMI__Desired_Start__c &gt; CCMI__Parent_End__c,
    /* Use desired start if after parent end (or if there is no parent) */
    CCMI__Desired_Start__c,
    /* Otherwise, set to Parent End + 1, adjusted for weekends */
    CCMI__Parent_End__c + CASE(MOD(CCMI__Parent_End__c - DATE(1900, 1, 8), 7),
      4, 3,
      5, 2,
      1
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated start date of the Task, derived from the Desired Start Date and, if there is a parent Task, the parent Task&apos;s calculated end date.</inlineHelpText>
        <label>Start Date (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMI__Status_Enum__c</fullName>
        <formula>CASE(CCMI__Status__c,
  &apos;Not Started&apos;, 0,
  &apos;In Progress&apos;, 1,
  &apos;Completed&apos;, 2,
  -1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Enum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCMI__Status__c</fullName>
        <inlineHelpText>The status of the Task. This field is manually set.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCMI__Timeline_Health_Reason__c</fullName>
        <formula>CASE(CCMI__Status_Enum__c,
  2, &apos;Task is complete&apos;,
  -1, IF(ISPICKVAL(CCMI__Status__c, &apos;On Hold&apos;), &apos;Task is on hold&apos;, &apos;&apos;),
  IF(CCMI__End__c &lt; TODAY(),
    &apos;Task is ending late&apos;,
    IF(CCMI__Status_Enum__c == 0 &amp;&amp; CCMI__Start__c &lt; TODAY(), &apos;Task is starting late&apos;, &apos;Task is on time&apos;)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The reason for the current Timeline Health status.</inlineHelpText>
        <label>Timeline Health Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Timeline_Health__c</fullName>
        <formula>CASE(CCMI__Status_Enum__c,
  2, &apos;Green&apos;,
  -1, &apos;N/A&apos;,
  IF(CCMI__End__c &lt; TODAY(),
    &apos;Red&apos;,
    IF(CCMI__Status_Enum__c == 0 &amp;&amp; CCMI__Start__c &lt; TODAY(), &apos;Yellow&apos;, &apos;Green&apos;)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The health of the Task as determined by the Status, Start Date, and End Date of the Task. See the &apos;Timeline Health Reason&apos; for more information.</inlineHelpText>
        <label>Timeline Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Total_Completed_Sub_Tasks__c</fullName>
        <label>Total Completed Sub Tasks</label>
        <summaryFilterItems>
            <field>CCMI__Milestone_Sub_Task__c.CCMI__IsComplete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CCMI__Milestone_Sub_Task__c.CCMI__Milestone_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Total_Sub_Tasks__c</fullName>
        <label>Total Sub Tasks</label>
        <summaryForeignKey>CCMI__Milestone_Sub_Task__c.CCMI__Milestone_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Type__c</fullName>
        <inlineHelpText>The type of the Task</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legals</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCMI__Worked_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Project Task</label>
    <listViews>
        <fullName>CCMI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CCMI__Cannot_Start_on_Weekend</fullName>
        <active>true</active>
        <errorConditionFormula>MOD(CCMI__Desired_Start__c - DATE(1900, 1, 8), 7) &gt; 4</errorConditionFormula>
        <errorDisplayField>CCMI__Desired_Start__c</errorDisplayField>
        <errorMessage>Tasks must start on a weekday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCMI__Must_have_Duration</fullName>
        <active>true</active>
        <errorConditionFormula>CCMI__Duration__c &lt; 1</errorConditionFormula>
        <errorDisplayField>CCMI__Duration__c</errorDisplayField>
        <errorMessage>Tasks must have a duration of at least 1 day</errorMessage>
    </validationRules>
</CustomObject>